# syncbops

./: Cargo.toml  README.md
src/: ffmpeg_interface.rs  hashing.rs  main.rs  music_library.rs  song.rs  sync_song.rs  test_data.rs
test_data/: CREDITS.txt  no_art.flac  no_art.m4a  ns_rotterdam.flac  ns_rotterdam_110kbps.m4a  ns_rotterdam_128kbps.m4a  ns_rotterdam_128kbps.opus  ns_rotterdam_128kbps_art.opus  ns_rotterdam_96kbps.opus  ns_rotterdam_96kbps_art.opus  with_art.flac  with_art.m4a
