[package]
name = "syncbops"
version = "1.0.0"
edition = "2021"

# Enabling link-time optimization can decrease binary size
[profile.release]
lto = true

[dependencies]
clap = { version = "^4.5", features = ["cargo", "derive"] }
dirs = "6.0.0"
fs_extra = "1.3.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
miette = { version = "7.5.0", features = ["fancy"] }
random-string = "1.1.0"
rapidhash = "1.4.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
walkdir = "2.5.0"
