[package]
name = "syncbops"
version = "1.1.0"
edition = "2021"
authors = ["Aida van de Wetering <aida@osphire.com>"]
license = "GPL-3.0-or-later"
description = "A tool to easily maintain a smaller-size copy of your music library, and keep it in sync with your main library. Useful for keeping a compact version of your music library on a mobile device."
readme = "README.md"
homepage = "https://github.com/aidavdw/syncbops"
repository = "https://github.com/aidavdw/syncbops"
keywords = ["music", "synchronization", "mobile", "audio", "file-management"]
categories = ["compression", "multimedia::audio"]

# Enabling link-time optimization can decrease binary size
[profile.release]
lto = true

[dependencies]
clap = { version = "^4.5", features = ["cargo", "derive"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
fs_extra = "1.3.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
rapidhash = "1.4.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
walkdir = "2.5.0"

[dev-dependencies]
miette = { version = "7.5.0", features = ["fancy"] }
random-string = "1.1.0"
